# app-boilerplate

./: .gitignore  CMakeLists.txt  flex.txt  ledger-sdk.cmake  ledgerblue_wrapper.py  meson.build  meson.options  options.cmake
.devcontainer/: devcontainer.json
fuzzing/: CMakeLists.txt  fuzz_tx_parser.c  mock.c
src/: address.c  app_main.c  types.h
src/apdu/: dispatcher.c
src/handler/: get_public_key.c  sign_tx.c
src/ui/: nbgl_display_address.c  nbgl_display_transaction.c
src/ui/action/: validate.c
tests/: requirements.txt
toolchains/: flex.cmake  fuzzing.cmake  nanosp.cmake  stax.cmake
